# numerical-quantum

./: .gitignore  CMakeLists.txt  README
python/: PlotEigs.py
src/: Complex.cpp  Complex.h  Constants.h  Dirac.cpp  Energy.h  Hydrogen.cpp  MathUtil.h
src/grid/: DiracPhysics.h  RealScalarAntisymmetricPhysics.h  RealScalarPhysics.h
src/manybody1D/singleparticle/: ForceCurve.h  Hamiltonian.h  SingleParticleFiniteDifference.cpp  Snapshot.h
src/manybody1D/twoparticle/: TwoParticleFiniteDifference.cpp
src/montecarlo/: BigSum.h  Bounds.h  CommandLine.h  EuclideanPoint.h  FirstIntegral.cpp  Generator.h  PartialWork.h  SecondIntegral.cpp  SecondIntegral_a.cpp  SecondIntegral_a2.cpp  Spheres.cpp  SphericalPoint.h  TestBigSum.cpp  TwoCircles.cpp
src/montecarlo/cuda/: BasicCudaTest.cpp  FirstIntegralCuda.cpp
src/montecarlo/cuda/cudalib/: CudaArray.h  CudaContext.cpp  CudaContext.h  CudaDevice.cpp  CudaDevice.h  CudaFunction.h  CudaModule.h
src/montecarlo/cuda/kernels/: BigSum.cuh  CircleArea.cu  FirstIntegral.cu
src/montecarlo/mersenne/: DenseF2Matrix.h  MatrixElement.h  MersenneTwister.h  SparseMatrix.h  TestCharacteristicPoly.cpp  TestJumpAhead.cpp  TestMersenneTwister.cpp
src/montecarlo/mrg32k3a/: Matrix3x3.h  Mrg32k3a.h  TestMrg32k3a.cpp
src/stdeig/: ChebyshevFilter.cpp  ChebyshevFilter.h  EigenSolver.h
